Cambio de nombres

--- a/DW/1-basico/0-Obsidian/1.obsidian.md
+++ b/DW/1-basico/0-Obsidian/1.obsidian.md
@@ -186,7 +186,7 @@ Ejemplo 03:
 Transclusion dentro de una nota   
 ![[notaprueba01#Ejemplo de prueba 01]]   
 Transclusion anidada dentro de la nota seleccionada arriba     
-![[1.apuntes-obsidian#6 Cómo crear referencias a bloques obsidian y transclusiones]]   
+![[1.obsidian#6 Cómo crear referencias a bloques obsidian y transclusiones]]   
 
 Ejemplo 04:    
 Identificador personalizado ^ 
