--- a/DW/1-basico/6-html-css/2-css/games-to-learn-css/3.type-selector.md
+++ b/DW/1-basico/6-html-css/2-css/games-to-learn-css/3.type-selector.md
@@ -1,13 +1,13 @@
-# CSS Dinner 
+# CSS Dinner
 
-[Juega aquí]([https://flukeout.github.io/](https://flukeout.github.io/))
+[Juega aquí](<[https://flukeout.github.io/](https://flukeout.github.io/)>)
 
 ## 1. Select the plates
 
 ```css
 <div class="table">
-	<plate />
-	<plate />
+  <plate />
+  <plate />
 </div>
 ```
 
@@ -17,9 +17,9 @@ Answer: `plate`
 
 ```css
 <div class="table">
-	<bento />
-	<plate />
-	<bento />
+  <bento />
+  <plate />
+  <bento />
 </div>
 ```
 
@@ -123,12 +123,13 @@ Answer: `orange.small`
     <orange class="small" />
   </bento>
 </div>
-``` 
+```
 
 Answer: `bento orange.small`
 
 ```css
-``` 
+
+```
 
 ## 9. Select all the plates and bentos
 
@@ -148,11 +149,11 @@ Answer: `bento orange.small`
   <pickle />
   <pickle class="small" />
 </div>
-``` 
+```
 
 Answer: `plate, bento`
 
-## 10. Select all the things!
+## 10. Select all the things
 
 ```css
 <div class="table">
@@ -166,19 +167,19 @@ Answer: `plate, bento`
   </bento>
   <plate id="fancy" />
 </div>
-``` 
+```
 
 Answer: `*`
 
-
 ---
+
 ```css
-``` 
+
+```
 
 Answer: `xx`
 
-
-11 plate *  
+11 plate _  
 12 plate +apple  
 13 bento ~ pickle  
 14 plate > apple  
@@ -199,4 +200,4 @@ Answer: `xx`
 29 [for=“Vitaly”]  
 30 [for^=“Sa”]  
 31 [for$=“to”]  
-32 [for*=“obb”]
+32 [for_=“obb”]
