--- a/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
+++ b/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
@@ -41,7 +41,56 @@ JavaScript únicamente guarda la información en tiempo de ejecución si esta in
 
 ## 3. Debuggeando caché y networking
 
-descarga el proyecto anterior
+Descarga el proyecto anterior
 
+[[debugging-devtools#16. ¿Cuándo utilizar Network en DevTools?]]
+
+## Quiz: Qué se debe optimizar en el frontend (y qué no)
+
+1. ¿Qué técnicas se pueden utilizar para maximizar la eficiencia de la carga de datos?
+
+	- Caché
+
+2. ¿Por qué es importante considerar la carga y optimización de datos en el frontend?
+
+	- Para brindar una buena experiencia a los usuarios
+
+3. How does memorization improve the performance of an application?
+
+	- By avoiding the repetition of complex computations.
+
+3. ¿Qué se menciona acerca de la función de recarga de la página?
+
+	- Se explica cómo se recargan diferentes elementos al realizar una recarga fuerte.
+
+4. What is memorization in JavaScript?
+
+	- A technique to store previously computed results or API responses.
+
+## 4. Loading spinners vs. loading skeletons
+
+Buenas características de las pantallas de carga:
+
+- Facilitan la comprensión del estado de carga
+- Son amigables con el tiempo de carga
+- Hacen que la experiencia de carga sea divertida
+
+Tenemos dos estrategias principales para manejar las pantallas de carga:
+
+### Loading spinners
+
+- Un anillo animado que indica que algo se está cargando
+- No proporciona información clara sobre lo que se está cargando
+- No nos permite saber si hemos perdido la conexión WiFi o si la web se ha bloqueado
+
+### Loading skeletons
+
+- Tienen buenas prácticas que los usuarios disfrutan
+- Proporcionan una representación visual de lo que se está cargando, lo que hace que la espera sea más informativa
+- Pueden reducir la percepción del tiempo de carga al mostrar la estructura de la página mientras se cargan los contenidos detallados
+
+![](https://i.postimg.cc/hvRwMjDH/4-spinner-skeleton-loader.jpg)
+
+## 5. Reto: pantalla de carga
 
 
