--- a/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
+++ b/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
@@ -93,4 +93,170 @@ Tenemos dos estrategias principales para manejar las pantallas de carga:
 
 ## 5. Reto: pantalla de carga
 
+Ejemplo de Animación simple:
 
+`index.html`
+
+```html
+<section class="container">
+  <div class="item loading"></div>
+  <div class="item loading"></div>
+  <div class="item loading"></div>
+  <div class="item loading"></div>
+</section>
+```
+
+`styles.css`
+
+```css
+.container {
+  display: flex;
+  gap: 30px;
+}
+.item {
+  width: 80px;
+  height: 80px;
+  background-color: darkslateblue;
+}
+
+.loading {
+  animation: insane infinite 1.5s;
+}
+
+@keyframes insane {
+  0%,
+  100% {
+    opacity: 100%;
+  }
+
+  50% {
+    opacity: 50%;
+  }
+}
+```
+
+![](https://i.postimg.cc/tCmR2bk3/5-animation.png)
+
+## 6. Intersection Observer
+
+[[manipulacion-dom#Curso de Manipulación del DOM#22. Intersection Observer]]
+
+Vídeos que pueden ayudarte a practicar; además, complementar aún más el conocimiento del curso.
+
+- [Intersection Observer](https://www.youtube.com/watch?v=cVsqA4NhDoI&t=33s)
+- [Scroll Infinito](https://www.youtube.com/watch?v=m5yS-RsKGTw&t=3s)
+
+## 7. Lazy Loading
+
+[[manipulacion-dom#23. Aplicando Lazy loading#Atributos data*]]
+
+## 8. Imágenes por defecto
+
+Tener cuidado con la medida o tamaño de las imágenes al cargar, esto podría estar afectando el Lazy Loading. Por lo que se recomienda añadir un `min-height` desde el inicio y después sobreescribirlo con la medida real.
+
+## Quiz: Optimización de imágenes
+
+1. What approach does the author prefer for solving the problem of lazy loading?
+
+	- Using an intersection observer in JavaScript
+
+2. ¿Por qué la ruedita de carga no cumple con las prácticas adecuadas?
+
+	- No indica qué se está cargando ni cuánto tiempo falta.
+
+3. What is the initial visibility of the images when the page is reloaded?
+
+	- Only one specific image is visible
+
+4. ¿Qué es Lazy Lading?
+
+	- Indicarle a nuestras imágenes que no carguen todas desde el principio, sino únicamente cuando los usuarios lleguen a esa parte de la app.
+
+5. ¿Qué es el churn rate?
+
+	- La cantidad de usuarios que entran a nuestra app, pero luego la abandonan.
+
+## 9. Scroll infinito vs. paginación
+
+## 10. Botón de cargar más
+
+## 11. Infinite Scrolling: evento de scroll
+
+### Qué es `document.documentElement`
+
+`document.documentElement` es una propiedad de solo lectura del objeto `document` en el DOM (Document Object Model). Representa el elemento raíz del documento, que es el elemento `<html>` en un documento HTML.
+
+A través de esta propiedad, se puede acceder y manipular el contenido y los atributos del elemento `<html>` directamente. 
+
+### Cómo funciona
+
+El elemento `<html>` es el contenedor principal de todo el contenido de una página web, y `document.documentElement` proporciona una referencia directa a este elemento. Al acceder a `document.documentElement`, puedes manipular el elemento `<html>` de la misma manera que lo harías con cualquier otro nodo del DOM.
+
+### Cómo se usa
+
+A continuación, se muestran algunos ejemplos prácticos de cómo usar `document.documentElement` en JavaScript:
+
+#### 1. Acceder al elemento `<html>`
+
+Puedes acceder al elemento `<html>` y leer sus atributos o propiedades:
+
+```javascript
+// Acceder al elemento <html>
+var htmlElement = document.documentElement;
+
+console.log(htmlElement); // Muestra el elemento <html> completo
+```
+
+#### 2. Cambiar el idioma del documento
+
+Puedes cambiar el atributo `lang` del elemento `<html>`:
+
+```javascript
+// Cambiar el idioma del documento a español
+document.documentElement.lang = "es";
+
+// Cambiar el idioma del documento al inglés
+document.documentElement.lang = "en";
+```
+
+#### 3. Aplicar estilos al elemento `<html>`
+
+Puedes aplicar estilos directamente al elemento `<html>` usando `document.documentElement`:
+
+```javascript
+// Cambiar el color de fondo del elemento <html>
+document.documentElement.style.backgroundColor = "lightblue";
+```
+
+#### 4. Obtener el ancho y alto del viewport
+
+`document.documentElement` es útil para obtener el tamaño del viewport (la parte visible de la página):
+
+```javascript
+// Obtener el ancho del viewport
+var viewportWidth = document.documentElement.clientWidth;
+
+// Obtener el alto del viewport
+var viewportHeight = document.documentElement.clientHeight;
+
+console.log("Ancho del viewport:", viewportWidth);
+console.log("Alto del viewport:", viewportHeight);
+```
+
+#### 5. Desplazamiento del documento
+
+Puedes obtener y establecer la posición de desplazamiento de la página usando `document.documentElement`:
+
+```javascript
+// Obtener la posición de desplazamiento vertical
+var scrollTop = document.documentElement.scrollTop;
+
+console.log("Posición de desplazamiento vertical:", scrollTop);
+
+// Establecer la posición de desplazamiento vertical
+document.documentElement.scrollTop = 100;
+```
+
+### Resumen
+
+`document.documentElement` es una forma directa y conveniente de acceder al elemento `<html>` del documento. Puedes usarlo para manipular atributos, aplicar estilos, obtener información sobre el viewport y controlar el desplazamiento de la página. Es una herramienta poderosa y versátil para la manipulación del DOM en JavaScript.
