remove/addEventListener parameters

--- a/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
+++ b/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
@@ -192,9 +192,9 @@ A través de esta propiedad, se puede acceder y manipular el contenido y los atr
 
 El elemento `<html>` es el contenedor principal de todo el contenido de una página web, y `document.documentElement` proporciona una referencia directa a este elemento. Al acceder a `document.documentElement`, puedes manipular el elemento `<html>` de la misma manera que lo harías con cualquier otro nodo del DOM.
 
-### Cómo se usa
+### Propiedades y Atributos Comunes
 
-A continuación, se muestran algunos ejemplos prácticos de cómo usar `document.documentElement` en JavaScript:
+El elemento `document.documentElement`, que corresponde al elemento `<html>` en un documento HTML, tiene varios atributos y propiedades que puedes utilizar. A continuación, se detallan algunos de los más importantes y cómo se pueden usar:
 
 #### 1. Acceder al elemento `<html>`
 
@@ -245,7 +245,7 @@ console.log("Alto del viewport:", viewportHeight);
 
 #### 5. Desplazamiento del documento
 
-Puedes obtener y establecer la posición de desplazamiento de la página usando `document.documentElement`:
+Estas propiedades devuelven o establecen la posición de desplazamiento vertical y horizontal del documento.
 
 ```javascript
 // Obtener la posición de desplazamiento vertical
@@ -255,8 +255,265 @@ console.log("Posición de desplazamiento vertical:", scrollTop);
 
 // Establecer la posición de desplazamiento vertical
 document.documentElement.scrollTop = 100;
+
+// Obtener la posición de desplazamiento horizontal
+var scrollLeft = document.documentElement.scrollLeft;
+
+console.log("Posición de desplazamiento horizontal:", scrollLeft);
+
+// Establecer la posición de desplazamiento horizontal
+document.documentElement.scrollLeft = 100;
 ```
 
-### Resumen
+#### 6. `document.documentElement.dir`
 
-`document.documentElement` es una forma directa y conveniente de acceder al elemento `<html>` del documento. Puedes usarlo para manipular atributos, aplicar estilos, obtener información sobre el viewport y controlar el desplazamiento de la página. Es una herramienta poderosa y versátil para la manipulación del DOM en JavaScript.
+Este atributo establece o devuelve la dirección del texto del documento (`ltr` para izquierda a derecha o `rtl` para derecha a izquierda).
+
+```javascript
+// Obtener la dirección del texto del documento
+var dir = document.documentElement.dir;
+
+console.log("Dirección del texto del documento:", dir);
+
+// Establecer la dirección del texto del documento a derecha a izquierda
+document.documentElement.dir = "rtl";
+```
+
+#### 7. `document.documentElement.title`
+
+Aunque generalmente se accede y se manipula a través del elemento `<title>`, también puedes acceder al título del documento a través de `document.documentElement`.
+
+```javascript
+// Obtener el título del documento
+var title = document.title;
+
+console.log("Título del documento:", title);
+
+// Establecer un nuevo título para el documento
+document.title = "Nuevo Título";
+```
+
+### Propiedades del Documento
+
+#### `document.documentElement.offsetWidth` y `document.documentElement.offsetHeight`
+
+Estas propiedades devuelven el ancho y el alto del elemento `<html>` incluyendo los bordes.
+
+```javascript
+// Obtener el ancho del elemento <html> incluyendo los bordes
+var offsetWidth = document.documentElement.offsetWidth;
+
+// Obtener el alto del elemento <html> incluyendo los bordes
+var offsetHeight = document.documentElement.offsetHeight;
+
+console.log("Ancho del elemento <html>:", offsetWidth);
+console.log("Alto del elemento <html>:", offsetHeight);
+```
+
+**Dato**:
+
+- Usa `clientHeight` cuando necesitas saber la altura del área visible al usuario.
+- Usa `offsetHeight` cuando necesitas la altura total del elemento, incluyendo los bordes y el scrollbar.
+
+Además:
+
+```js
+// Incluye solo el padding, no los bordes.
+document.documentElement.scrollHeight
+```
+
+Este último es parecido a `offsetHeight` el cual nos muestra la cantidad de scroll total que podemos hacer.
+
+### Métodos de Manipulación
+
+#### `document.documentElement.getBoundingClientRect()`
+
+Este método devuelve un objeto `DOMRect` que proporciona información sobre el tamaño del elemento y su posición relativa al viewport.
+
+```javascript
+// Obtener las dimensiones y la posición del elemento <html>
+var rect = document.documentElement.getBoundingClientRect();
+
+console.log("Dimensiones y posición del elemento <html>:", rect);
+```
+
+Ejemplo:
+
+```js
+DOMRect {
+    "x": 0,
+    "y": -304,
+    "width": 320,
+    "height": 964,
+    "top": -304,
+    "right": 320,
+    "bottom": 660,
+    "left": 0
+}
+```
+
+📌 Lo curioso es que si sumamos `document.documentElement.scrollTop + document.documentElement.clientHeight` obtendremos el total de scroll que podemos hacer.
+
+![](https://i.postimg.cc/02dcnZw3/11-scroll.png)
+
+### 🔥 `window.removeEventListener("scroll", infiniteScroll, ¿parametro?👈👀);`
+
+El tercer parámetro en los métodos `addEventListener` y `removeEventListener` se utiliza para especificar opciones adicionales para el evento. Este parámetro puede ser un valor booleano (true o false) o un objeto de opciones. 
+
+#### Uso del tercer parámetro en `removeEventListener`
+
+El tercer parámetro en `removeEventListener` **debe coincidir** con el tercer parámetro utilizado en `addEventListener` para que la eliminación del evento sea efectiva.
+
+#### Casos de uso y aplicación en `addEventListener`
+
+En `addEventListener`, el tercer parámetro puede ser un booleano o un objeto. Aquí hay un resumen:
+
+1. **Booleano (`true` o `false`)**:
+   - **`true`**: La fase de captura. El evento se captura en la fase de captura, antes de llegar al objetivo del evento.
+   - **`false`**: La fase de burbuja. El evento se maneja en la fase de burbuja, después de que se ha propagado desde el objetivo hacia afuera. Este es el comportamiento predeterminado.
+
+2. **Objeto de opciones**: Este objeto puede tener varias propiedades, como:
+   - **`capture`** (booleano): Equivalente a usar `true` o `false` directamente.
+   - **`once`** (booleano): Si es `true`, el evento se ejecuta solo una vez y luego se elimina automáticamente.
+   - **`passive`** (booleano): Si es `true`, indica que el manejador de eventos nunca llamará a `preventDefault`, mejorando el rendimiento en algunos casos como el desplazamiento (scrolling) o en eventos como `touchstart` y `touchmove`.
+
+#### Ejemplo de `removeEventListener` y `addEventListener`
+
+```javascript
+// Definimos una función de manejo de eventos
+function infiniteScroll() {
+    console.log('Scrolled');
+}
+
+// Añadimos el evento usando un objeto de opciones
+window.addEventListener("scroll", infiniteScroll, {
+  capture: false,
+  passive: true,
+  once: false
+});
+
+// Más tarde, removemos el evento usando los mismos parámetros
+window.removeEventListener("scroll", infiniteScroll, {
+  capture: false,
+  passive: true
+});
+```
+
+#### Fase de captura y fase de burbuja
+
+- **Fase de captura (true)**: En esta fase, el evento se propaga desde el elemento `window` (o el más alto en el DOM) hacia el objetivo del evento. Si se establece el tercer parámetro como `true` o se usa `{ capture: true }`, el evento será capturado durante esta fase.
+
+- **Fase de burbuja (false)**: Después de que el evento alcanza su objetivo, comienza a propagarse de regreso hacia el elemento `window` (o el más alto en el DOM). 🔥 Este es el comportamiento predeterminado, y se puede especificar con `false` o `{ capture: false }`.
+
+##### Ejemplo de `addEventListener` con booleano
+
+```javascript
+// Definimos una función de manejo de eventos
+function handleClick(event) {
+    console.log('Clicked', event.target);
+}
+
+// Añadimos el evento para la fase de burbuja
+document.getElementById('myElement').addEventListener('click', handleClick, false);
+
+// Añadimos el evento para la fase de captura
+document.getElementById('myElement').addEventListener('click', handleClick, true);
+
+// Removemos el evento para la fase de burbuja
+document.getElementById('myElement').removeEventListener('click', handleClick, false);
+
+// Removemos el evento para la fase de captura
+document.getElementById('myElement').removeEventListener('click', handleClick, true);
+```
+
+En resumen, el tercer parámetro en `addEventListener` y `removeEventListener` proporciona un control más granular sobre cómo y cuándo se deben manejar los eventos, y su uso correcto es esencial para la gestión eficiente de eventos en aplicaciones web.
+
+#### `preventDefault` y su Relación con los Eventos
+
+`preventDefault` es un método que se usa en el manejo de eventos para evitar el comportamiento predeterminado del navegador asociado con el evento. Por ejemplo:
+
+- Evitar que un enlace (`<a>`) navegue a otra página.
+- Evitar que un formulario (`<form>`) se envíe.
+- Evitar el comportamiento de desplazamiento (scroll) en ciertos eventos.
+
+##### Ejemplo de `preventDefault`
+
+```javascript
+document.getElementById('myLink').addEventListener('click', function(event) {
+    event.preventDefault(); // Evita que el enlace navegue
+    console.log('Enlace clickeado, pero navegación evitada.');
+});
+```
+
+#### Parámetro `passive`
+
+El parámetro `passive` en `addEventListener` es una optimización de rendimiento. Cuando `passive` se establece en `true`, le indica al navegador que el manejador de eventos no llamará a `preventDefault`. Esto permite que el navegador optimice el rendimiento en algunos casos, como el desplazamiento (scroll), ya que el navegador no necesita esperar a ver si `preventDefault` será llamado.
+
+##### Relación entre `passive` y `preventDefault`
+
+- **`passive: true`**: Indica que el evento es "pasivo". No se llamará a `preventDefault` en el manejador de eventos.
+  - Ventaja: Mejor rendimiento, especialmente para eventos de desplazamiento (scroll), ya que el navegador puede proceder con el comportamiento predeterminado sin esperar a que el manejador del evento lo bloquee.
+  - Restricción: Intentar llamar a `preventDefault` lanzará un error en la consola.
+
+- **`passive: false`**: Indica que el evento es "activo". Se puede llamar a `preventDefault` para evitar el comportamiento predeterminado.
+  - Ventaja: Permite prevenir el comportamiento predeterminado del navegador.
+  - Desventaja: Puede resultar en un rendimiento menos óptimo en algunos casos, como el desplazamiento (scroll), porque el navegador necesita esperar para ver si `preventDefault` será llamado.
+
+##### Ejemplo de `passive`
+
+###### Con `passive: true`
+
+```javascript
+window.addEventListener('scroll', function(event) {
+    console.log('Scrolled');
+}, { passive: true });
+
+// Este código no funciona si se intenta llamar a preventDefault dentro del manejador:
+// window.addEventListener('scroll', function(event) {
+//     event.preventDefault(); // Esto lanzará un error
+// }, { passive: true });
+```
+
+###### Con `passive: false`
+
+```javascript
+window.addEventListener('scroll', function(event) {
+    event.preventDefault(); // Esto es permitido
+    console.log('Scrolled and default behavior prevented');
+}, { passive: false });
+```
+
+El valor por defecto del parámetro `passive` es `false`. Esto significa que, a menos que se especifique explícitamente lo contrario, los manejadores de eventos se tratarán como no pasivos, permitiendo el uso de `preventDefault` dentro del manejador de eventos.
+
+Si no se especifica el parámetro `passive`, se asume `false` por defecto:
+
+```javascript
+// Sin especificar passive, se asume passive: false
+window.addEventListener('scroll', function(event) {
+    event.preventDefault(); // Esto es permitido por defecto
+    console.log('Scrolled and default behavior prevented');
+});
+```
+
+En resumen:
+
+- **`preventDefault`**: Método para prevenir el comportamiento predeterminado del navegador asociado con el evento.
+- **`passive`**: Un parámetro en `addEventListener` que, cuando se establece en `true`, indica que no se llamará a `preventDefault` en el manejador de eventos, permitiendo optimizaciones de rendimiento.
+- **Valor por defecto de `passive`**: `false`.
+- **Comportamiento predeterminado**: Permite el uso de `preventDefault`.
+- **Relación**: Si `passive` es `true`, no se puede usar `preventDefault` en el manejador de eventos. Si `passive` es `false`, se puede usar `preventDefault`, pero puede impactar el rendimiento.
+- **Especificar `passive: true`**: Indica que `preventDefault` no se usará, mejorando el rendimiento para ciertos eventos.
+
+Usar `passive: true` es una buena práctica para eventos de desplazamiento (scroll) y otros eventos de alta frecuencia, donde no se necesita prevenir el comportamiento predeterminado.
+
+#### 📌 Dato
+
+`Passive` lo que hace es evitar el llamado de `preventDefault()` en el caso de que este existiese en la función llamada por el Listener. 
+
+En los navegadores que usa la gente normal el valor **por defecto es false** por lo que no se aplica, pero en el caso de Safari e Internet Explorer el valor por defecto es true. 
+
+Por lo que supongo que es recomendable ponerle un valor para que el código se ejecute igual en todos los navegadores.
+
+🔥
+
+👈👀
