--- a/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
+++ b/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
@@ -313,7 +313,7 @@ console.log("Alto del elemento <html>:", offsetHeight);
 **Dato**:
 
 - Usa `clientHeight` cuando necesitas saber la altura del área visible al usuario.
-- Usa `offsetHeight` cuando necesitas la altura total del elemento, incluyendo los bordes y el scrollbar.
+- Usa `offsetHeight` cuando necesitas la altura total del elemento, incluyendo los bordes y el scrollbar. 📌 Su comportamiento puede variar.
 
 Además:
 
@@ -321,8 +321,6 @@ Además:
 // Incluye solo el padding, no los bordes.
 document.documentElement.scrollHeight
 ```
-
-Este último es parecido a `offsetHeight` el cual nos muestra la cantidad de scroll total que podemos hacer.
 
 ### Métodos de Manipulación
 
@@ -514,6 +512,13 @@ En los navegadores que usa la gente normal el valor **por defecto es false** por
 
 Por lo que supongo que es recomendable ponerle un valor para que el código se ejecute igual en todos los navegadores.
 
-🔥
+## 12. Infinite Scrolling: limitando la carga de datos
 
+## 13. Infinite Scrolling: closures de navegación
+
+[[closures_scope-en-js#**7.** ¿Qué es un Closure?]]
+
+
+🔥
+📌
 👈👀
