--- a/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
+++ b/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
@@ -518,7 +518,81 @@ Por lo que supongo que es recomendable ponerle un valor para que el código se e
 
 [[closures_scope-en-js#**7.** ¿Qué es un Closure?]]
 
+En JavaScript, el patrón `example()()` es una forma de "función de orden superior" o una "función que devuelve otra función". Este patrón se usa en varios contextos, como la creación de funciones que configuran algo y luego devuelven otra función que hace el trabajo real, currying, o closures.
 
+Aquí hay algunos ejemplos de situaciones en las que se podría usar este patrón:
+
+### 1. Función que devuelve otra función
+
+```javascript
+function example() {
+  return function() {
+    console.log('Hello, world!');
+  };
+}
+
+example()(); // Llama a example, que devuelve otra función, y luego llama a esa función
+```
+
+### 2. Currying
+
+Currying es una técnica en la que una función que acepta múltiples argumentos se descompone en una serie de funciones que aceptan un solo argumento.
+
+```javascript
+function add(a) {
+  return function(b) {
+    return a + b;
+  };
+}
+
+const add5 = add(5); // add5 ahora es una función que suma 5 a su argumento
+console.log(add5(10)); // 15
+
+console.log(add(3)(4)); // 7
+```
+
+### 3. Closures
+
+Las closures permiten que una función interna acceda al alcance de una función externa, incluso después de que la función externa haya terminado de ejecutarse.
+
+```javascript
+function makeCounter() {
+  let count = 0;
+  return function() {
+    count++;
+    return count;
+  };
+}
+
+const counter = makeCounter();
+console.log(counter()); // 1
+console.log(counter()); // 2
+console.log(counter()); // 3
+```
+
+En este ejemplo, `makeCounter` devuelve una función que incrementa y devuelve el valor de `count` cada vez que se llama.
+
+### 4. Configuración de funciones
+
+A veces se usa para configurar una función antes de usarla.
+
+```javascript
+function configureGreeting(greeting) {
+  return function(name) {
+    console.log(greeting + ', ' + name + '!');
+  };
+}
+
+const sayHello = configureGreeting('Hello');
+sayHello('Alice'); // Hello, Alice!
+sayHello('Bob'); // Hello, Bob!
+
+configureGreeting('Hi')('Charlie'); // Hi, Charlie!
+```
+
+En este ejemplo, `configureGreeting` es una función que toma un saludo y devuelve otra función que toma un nombre y muestra un saludo personalizado.
+
+Estos son algunos de los casos comunes en los que se utiliza el patrón de `example()()`.
 🔥
 📌
 👈👀
