--- a/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
+++ b/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
@@ -593,6 +593,244 @@ configureGreeting('Hi')('Charlie'); // Hi, Charlie!
 En este ejemplo, `configureGreeting` es una función que toma un saludo y devuelve otra función que toma un nombre y muestra un saludo personalizado.
 
 Estos son algunos de los casos comunes en los que se utiliza el patrón de `example()()`.
+
+## Quiz: Paginación
+
+1. Which strategy does the author suggest for the Platzi Movies platform?
+Elige la respuesta correcta
+
+	- The text does not explicitly mention a specific strategy for Platzi Movies
+
+2. What is the most common approach provided by APIs?
+Elige la respuesta correcta
+
+	- Pagination
+
+3. What feature is enabled by implementing this validation process?
+Elige la respuesta correcta
+
+	- Infinite scroll
+
+4. What is the error in the code regarding the 'Load More' button?
+Elige la respuesta correcta
+
+	- The button variable is not defined correctly
+
+5. What does the text mention about the implementation of pagination in a web page?
+Elige la respuesta correcta
+
+	- It highlights the issue of the infiniteScroll variable not being defined correctly.
+
+## 14. Local Storage vs. API real
+
+### Local Storage vs. API real
+
+**Local Storage** y **API real** son dos métodos comúnmente utilizados en aplicaciones web para almacenar y recuperar datos. Ambos tienen sus propias ventajas y desventajas y se usan en diferentes contextos dependiendo de los requisitos de la aplicación. Aquí hay una comparación de ambos:
+
+### Local Storage
+
+**Local Storage** es una característica del navegador web que permite almacenar datos en el cliente de manera persistente. Los datos almacenados en Local Storage no se eliminan cuando se cierra el navegador, lo que lo hace útil para guardar información que necesita persistir entre sesiones del usuario.
+
+#### Ventajas de Local Storage
+
+1. **Persistencia**: Los datos almacenados en Local Storage persisten incluso después de cerrar el navegador.
+2. **Fácil de usar**: La API de Local Storage es simple y directa, con métodos como `setItem`, `getItem`, `removeItem`, y `clear`.
+3. **Rápido acceso**: Los datos están almacenados localmente, lo que permite un acceso rápido sin necesidad de realizar una llamada a un servidor.
+4. **Independencia de red**: No requiere conexión a Internet para acceder a los datos almacenados.
+
+#### Desventajas de Local Storage
+
+1. **Capacidad limitada**: Generalmente, los navegadores limitan Local Storage a unos pocos megabytes.
+2. **Seguridad**: Los datos almacenados en Local Storage no están encriptados, lo que significa que pueden ser vulnerables a ataques si no se manejan adecuadamente.
+3. **Sin sincronización**: Los datos no se sincronizan automáticamente entre diferentes dispositivos o sesiones de navegador.
+4. **Solo strings**: Local Storage solo almacena datos en formato de string, lo que significa que otros tipos de datos deben ser convertidos a string (por ejemplo, usando JSON).
+
+### API Real
+
+Una **API real** (Application Programming Interface) se refiere a un servicio remoto que permite a una aplicación web interactuar con un servidor para almacenar y recuperar datos. Esto suele involucrar el uso de HTTP(S) para comunicarse con un servidor backend.
+
+#### Ventajas de una API real
+
+1. **Capacidad ilimitada**: En teoría, no hay límite en la cantidad de datos que se pueden almacenar en el servidor.
+2. **Seguridad**: Los datos pueden ser encriptados y protegidos por medidas de seguridad robustas en el servidor.
+3. **Sincronización**: Los datos pueden ser accedidos y actualizados desde múltiples dispositivos y sesiones de navegador, manteniéndose sincronizados.
+4. **Datos complejos**: Las APIs pueden manejar datos complejos y estructurados, no limitados a strings.
+
+#### Desventajas de una API real
+
+1. **Dependencia de red**: Requiere una conexión a Internet para acceder a los datos.
+2. **Latencia**: Acceder a datos a través de una red puede ser más lento que acceder a datos almacenados localmente.
+3. **Complejidad**: Configurar y mantener una API real puede ser más complejo que usar Local Storage, especialmente en términos de manejo de seguridad y escalabilidad.
+4. **Costos**: Ejecutar un servidor y manejar una base de datos puede incurrir en costos adicionales.
+
+### Cuándo usar cada uno
+
+**Local Storage** es ideal para:
+
+- Almacenar configuraciones y preferencias del usuario.
+- Datos que necesitan persistir entre sesiones del navegador pero no requieren sincronización entre dispositivos.
+- Aplicaciones simples que no necesitan interactuar con un servidor backend.
+
+**API real** es ideal para:
+
+- Aplicaciones que requieren persistencia y sincronización de datos en múltiples dispositivos.
+- Almacenamiento de grandes volúmenes de datos.
+- Aplicaciones que necesitan manejar datos sensibles y requieren medidas de seguridad avanzadas.
+- Funcionalidades complejas que necesitan comunicación continua con un servidor backend.
+
+En resumen, la elección entre Local Storage y una API real depende de las necesidades específicas de tu aplicación, incluyendo el tipo de datos que manejas, los requisitos de persistencia, la necesidad de sincronización y las consideraciones de seguridad.
+
+### **Datos interesantes**
+
+- El local Storage guarda de 5 a 10mb de datos (dependiendo del navegador)
+- No necesita bases de datos ni backend
+- Excelente para probar ideas y hacer testing de funcionalidades
+- Solamente guarda STRINGS
+- Se guarda por cada navegador
+- Es inseguro para guardar información
+
+Información relevante [en este link](https://www.tiny.cloud/blog/javascript-localstorage/)
+
+## 15. Botón de like
+
+Evitar la propagación del evento:
+
+```js
+movieButton.addEventListener("click", (event) => {
+  event.stopPropagation();
+  console.log("Agregar pelicula");
+  movieButton.classList.toggle("movie-btn--liked");
+});
+```
+
+## 16. Guardando películas en Local Storage
+
+LocalStorage es una característica del navegador web que permite almacenar datos de manera persistente en el navegador del usuario. A diferencia de las cookies, los datos almacenados en LocalStorage no se envían al servidor con cada solicitud HTTP, y se mantienen incluso si el navegador se cierra y se vuelve a abrir. LocalStorage es parte de la API de almacenamiento web de HTML5.
+
+Aquí te explico cómo usar LocalStorage con JavaScript:
+
+### Guardar datos en LocalStorage
+
+Para guardar datos, se utiliza el método `setItem`. Este método acepta dos argumentos: la clave (key) y el valor (value). Ambos deben ser cadenas de texto.
+
+```javascript
+localStorage.setItem('nombre', 'Juan');
+localStorage.setItem('edad', '30');
+```
+
+### Recuperar datos de LocalStorage
+
+Para recuperar datos, se utiliza el método `getItem`, que acepta una clave como argumento y devuelve el valor asociado a esa clave.
+
+```javascript
+let nombre = localStorage.getItem('nombre');
+let edad = localStorage.getItem('edad');
+
+console.log(nombre); // "Juan"
+console.log(edad);   // "30"
+```
+
+### Eliminar datos de LocalStorage
+
+Para eliminar un elemento específico de LocalStorage, se usa el método `removeItem`, que acepta la clave del elemento a eliminar.
+
+```javascript
+localStorage.removeItem('nombre');
+```
+
+### Limpiar todos los datos de LocalStorage
+
+Para eliminar todos los datos almacenados en LocalStorage, se usa el método `clear`.
+
+```javascript
+localStorage.clear();
+```
+
+### Verificar si una clave existe en LocalStorage
+
+Aunque no hay un método directo para verificar si una clave existe, se puede hacer comprobando si `getItem` devuelve `null`.
+
+```javascript
+if (localStorage.getItem('nombre') !== null) {
+  console.log('La clave existe');
+} else {
+  console.log('La clave no existe');
+}
+```
+
+### Almacenar y recuperar objetos JSON
+
+Dado que LocalStorage solo almacena cadenas de texto, para almacenar objetos JSON se deben convertir a cadenas usando `JSON.stringify`, y para recuperarlos se usa `JSON.parse`.
+
+```javascript
+// Almacenar un objeto
+let usuario = { nombre: 'Juan', edad: 30 };
+localStorage.setItem('usuario', JSON.stringify(usuario));
+
+// Recuperar un objeto
+let usuarioGuardado = JSON.parse(localStorage.getItem('usuario'));
+console.log(usuarioGuardado.nombre); // "Juan"
+console.log(usuarioGuardado.edad);   // 30
+```
+
+### Ejemplo completo
+
+Aquí tienes un ejemplo completo que muestra cómo usar LocalStorage para almacenar, recuperar y eliminar datos:
+
+```html
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Ejemplo de LocalStorage</title>
+    <script>
+      function guardarDatos() {
+        let nombre =
+          document.getElementById("nombre").value;
+        let edad = document.getElementById("edad").value;
+        localStorage.setItem("nombre", nombre);
+        localStorage.setItem("edad", edad);
+        mostrarDatos();
+      }
+
+      function mostrarDatos() {
+        let nombre = localStorage.getItem("nombre");
+        let edad = localStorage.getItem("edad");
+        document.getElementById("datos").innerHTML =
+          "Nombre: " + nombre + "<br>Edad: " + edad;
+      }
+
+      function eliminarDatos() {
+        localStorage.removeItem("nombre");
+        localStorage.removeItem("edad");
+        mostrarDatos();
+      }
+
+      window.onload = function () {
+        mostrarDatos();
+      };
+    </script>
+  </head>
+  <body>
+    <h1>Ejemplo de LocalStorage</h1>
+    <label for="nombre">Nombre:</label>
+    <input type="text" id="nombre" />
+    <br />
+    <label for="edad">Edad:</label>
+    <input type="text" id="edad" />
+    <br />
+    <button onclick="guardarDatos()">Guardar Datos</button>
+    <button onclick="eliminarDatos()">
+      Eliminar Datos
+    </button>
+    <h2>Datos Almacenados:</h2>
+    <div id="datos"></div>
+  </body>
+</html>
+```
+
+Este código crea una página HTML sencilla que permite al usuario ingresar un nombre y una edad, almacenarlos en LocalStorage y mostrarlos en la página. También permite eliminar los datos almacenados.
+
 🔥
 📌
 👈👀
+ver curso de autenticación
