--- a/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
+++ b/DW/2-intermedio/014.api-rest-js/3.api-rest-js-performance/3.api-rest-js-performance.md
@@ -830,6 +830,32 @@ Aquí tienes un ejemplo completo que muestra cómo usar LocalStorage para almace
 
 Este código crea una página HTML sencilla que permite al usuario ingresar un nombre y una edad, almacenarlos en LocalStorage y mostrarlos en la página. También permite eliminar los datos almacenados.
 
+### Objetos en el localStorage
+
+Para trabajar con objetos primero debemos convertirlos en strings. Luego, al recuperarlos se debe volver a convertir en objeto.
+
+```js
+// En consola
+localStorage
+localStorage.clear()
+
+const data = {
+  name: "Ale Roses",
+  age: 12,
+  nickname: "ghost",
+};
+
+localStorage.setItem("data", JSON.stringify(data));
+
+localStorage
+// Storage {data: '{"name":"Ale Roses","age":12,"nickname":"ghost"}', length: 1}
+
+const info = JSON.parse(localStorage.getItem("data"));
+
+info
+// {name: 'Ale Roses', age: 12, nickname: 'ghost'}
+```
+
 🔥
 📌
 👈👀
